RESOLVED FIXED161054
CanvasRenderingContext2D should not have a CanvasRenderingContext parent interface
https://bugs.webkit.org/show_bug.cgi?id=161054
Summary CanvasRenderingContext2D should not have a CanvasRenderingContext parent inte...
Chris Dumez
Reported 2016-08-22 13:26:29 PDT
CanvasRenderingContext2D should not have a CanvasRenderingContext parent interface as per: - https://html.spec.whatwg.org/multipage/scripting.html#canvasrenderingcontext2d Firefox and Chrome agree with the specification.
Attachments
Patch (34.17 KB, patch)
2016-08-22 14:56 PDT, Chris Dumez
no flags
Patch (34.20 KB, patch)
2016-08-22 19:18 PDT, Chris Dumez
no flags
Patch (34.20 KB, patch)
2016-08-22 19:19 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2016-08-22 14:56:22 PDT
WebKit Commit Bot
Comment 2 2016-08-22 16:25:09 PDT
Comment on attachment 286623 [details] Patch Clearing flags on attachment: 286623 Committed r204745: <http://trac.webkit.org/changeset/204745>
WebKit Commit Bot
Comment 3 2016-08-22 16:25:14 PDT
All reviewed patches have been landed. Closing bug.
Chris Dumez
Comment 4 2016-08-22 17:05:00 PDT
Reverted r204745 for reason: Broke the Windows build Committed r204748: <http://trac.webkit.org/changeset/204748>
Chris Dumez
Comment 5 2016-08-22 19:18:18 PDT
Chris Dumez
Comment 6 2016-08-22 19:19:30 PDT
Chris Dumez
Comment 7 2016-08-23 08:35:52 PDT
Comment on attachment 286651 [details] Patch Clearing flags on attachment: 286651 Committed r204839: <http://trac.webkit.org/changeset/204839>
Chris Dumez
Comment 8 2016-08-23 08:35:58 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.