CanvasRenderingContext2D should not have a CanvasRenderingContext parent interface https://bugs.webkit.org/show_bug.cgi?id=161054

Reviewed by Ryosuke Niwa.

LayoutTests/imported/w3c:

Rebaseline W3C test now that more checks are passing.

* web-platform-tests/html/dom/interfaces-expected.txt:

Source/WebCore:

CanvasRenderingContext2D should not have a CanvasRenderingContext parent interface
as per:
- https://html.spec.whatwg.org/multipage/scripting.html#canvasrenderingcontext2d

Firefox and Chrome agree with the specification.

No new tests, rebaselined existing test.

* CMakeLists.txt:
* DerivedSources.cpp:
* DerivedSources.make:
* WebCore.xcodeproj/project.pbxproj:
* bindings/js/JSBindingsAllInOne.cpp:
* bindings/js/JSCanvasRenderingContext.h: Renamed from Source/WebCore/bindings/js/JSCanvasRenderingContextCustom.cpp.
(WebCore::toJS):
* bindings/js/JSCanvasRenderingContext2DCustom.cpp:
(WebCore::JSCanvasRenderingContext2DOwner::isReachableFromOpaqueRoots):
(WebCore::JSCanvasRenderingContext2D::visitAdditionalChildren):
* bindings/js/JSDocumentCustom.cpp:
(WebCore::JSDocument::getCSSCanvasContext):
(WebCore::JSDocument::createTouchList): Deleted.
* bindings/js/JSHTMLCanvasElementCustom.cpp:
* bindings/scripts/CodeGeneratorJS.pm:
(GenerateImplementation):
* dom/Document.idl:
* html/canvas/CanvasRenderingContext.idl: Removed.
* html/canvas/CanvasRenderingContext2D.idl:
* html/canvas/WebGL2RenderingContext.idl:
* html/canvas/WebGLRenderingContext.idl:
* html/canvas/WebGLRenderingContextBase.idl:


Canonical link: https://commits.webkit.org/179206@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204745 268f45cc-cd09-0410-ab3c-d52691b4dbfc