Source/WebCore/bindings/js/JSCanvasRenderingContext.h
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2009 Apple Inc. All rights reserved.
+ * Copyright (C) 2015-2016 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -20,15 +20,37 @@
  * PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY
  * OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
  * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
- * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. 
+ * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-[
-    NoInterfaceObject,
-    JSCustomMarkFunction,
-    GenerateIsReachable,
-    CustomToJSObject
-] interface CanvasRenderingContext {
-    readonly attribute HTMLCanvasElement canvas;
-};
+#include "CanvasRenderingContext2D.h"
+#include "JSCanvasRenderingContext2D.h"
 
+#if ENABLE(WEBGL)
+#include "JSWebGL2RenderingContext.h"
+#include "JSWebGLRenderingContext.h"
+#include "WebGL2RenderingContext.h"
+#include "WebGLRenderingContext.h"
+#endif
+
+namespace WebCore {
+
+inline JSC::JSValue toJS(JSC::ExecState* state, JSDOMGlobalObject* globalObject, CanvasRenderingContext& object)
+{
+#if ENABLE(WEBGL)
+    if (is<WebGLRenderingContext>(object))
+        return wrap(state, globalObject, downcast<WebGLRenderingContext>(object));
+#if ENABLE(WEBGL2)
+    if (is<WebGL2RenderingContext>(object))
+        return wrap(state, globalObject, downcast<WebGL2RenderingContext>(object));
+#endif
+#endif
+    return wrap(state, globalObject, downcast<CanvasRenderingContext2D>(object));
+}
+
+inline JSC::JSValue toJS(JSC::ExecState* state, JSDOMGlobalObject* globalObject, CanvasRenderingContext* object)
+{
+    return object ? toJS(state, globalObject, *object) : JSC::jsNull();
+}
+
+} // namespace WebCore
